tests/snapshots/file@for@var_in_body.lox.snap
---
source: tests/common/mod.rs
description: "// [line 2] Error at 'var': Expect expression.\nfor (;;) var foo;\n"
input_file: crafting_interpreters_test_files/for/var_in_body.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false', found 'var'
   ╭─[2:10]
 1 │ // [line 2] Error at 'var': Expect expression.
 2 │ for (;;) var foo;
   ·          ─┬─
   ·           ╰── here
   ╰────
